--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,51 @@
-ipython
-jupyterlab
-matplotlib
-notebook
-numpy
-pandas
-pip
-pytest
-python-dotenv
-ruff
-scikit-learn
--e .
+alembic==1.16.4
+beautifulsoup4==4.13.4
+bs4==0.0.2
+certifi==2025.7.14
+charset-normalizer==3.4.2
+colorama==0.4.6
+colorlog==6.9.0
+contourpy==1.3.2
+cycler==0.12.1
+exceptiongroup==1.3.0
+fonttools==4.59.0
+greenlet==3.2.3
+idna==3.10
+iniconfig==2.1.0
+joblib==1.5.1
+kiwisolver==1.4.8
+lxml==6.0.0
+Mako==1.3.10
+MarkupSafe==3.0.2
+matplotlib==3.10.5
+narwhals==2.0.1
+numpy==2.2.6
+optuna==4.4.0
+packaging==25.0
+pandas==2.3.1
+pillow==11.3.0
+plotly==6.2.0
+pluggy==1.6.0
+Pygments==2.19.2
+pyparsing==3.2.3
+pytest==8.4.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+scikit-learn==1.7.1
+scipy==1.15.3
+seaborn==0.13.2
+simplejson==3.20.1
+six==1.17.0
+soupsieve==2.7
+SQLAlchemy==2.0.42
+threadpoolctl==3.6.0
+tomli==2.2.1
+tqdm==4.67.1
+tushare==1.4.21
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+websocket-client==1.8.0
+xgboost==3.0.3
