--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /models/predictors/results/
 /models/LinearRegression/results/
 /models/LogisticRegression/results/
+/models/XGBoost/results/
 /models/ElasticNet/results/
 /models/RandomForest/results/
 /models/archive/results
