--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /module/visualization/pic/
 /models/LSTM_GRU/results/
 /models/LSTM/results/
+/models/LSTMClaude/results/
 /models/predictors/results/
 /models/LinearRegression/results/
 /models/LogisticRegression/results/
